ajustes de links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -253,7 +253,7 @@
 
         <div class="col-b">
           <img
-          src="/assets/image.png"
+          src="./assets/image.png"
           alt="Mulher negra vestindo moleton verde e sorrindo"
             />
         </div>        
@@ -360,7 +360,7 @@
           </div>
         </div>
         <div class="col-b">
-          <img src="/assets/image2.png" alt="doutor sorridente segurando uma prancheta com pacientes">
+          <img src="./assets/image2.png" alt="doutor sorridente segurando uma prancheta com pacientes">
         </div>
 
       </div>
@@ -401,7 +401,7 @@
           </div>
         </div>
         <div class="col-b">
-          <img src="/assets/pic.png" alt="Homem negro com moleton acessando o celular">
+          <img src="./assets/pic.png" alt="Homem negro com moleton acessando o celular">
         </div>
       </div>
     </section>
@@ -563,6 +563,6 @@
         
     </a>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
